# FlapIndicator-mbed

./: .gitignore  .gitmodules  .mbed  .project  CMakeLists.txt  Makefile  Messung21-03-07.xlsx  Messungen.xlsx  README.md  flapIndicator.code-workspace  openocd.cfg  requirements.txt  setup.sh
.github/workflows/: build.yml  codeql-analysis.yml
libs/BackSeat/: CMakeLists.txt
libs/Common/: CMakeLists.txt
libs/FrontSeat/: CMakeLists.txt
src/: CMakeLists.txt
src/ADCPrint/: CMakeLists.txt  main.cpp
src/BackSeat/: BackSeat.cpp  BackSeat.h  BackSeatVarioHandler.cpp  BackSeatVarioHandler.h  CMakeLists.txt  main.cpp
src/Common/: AbstractFlapIndicator.h  AbstractFlapPosReader.cpp  AbstractFlapPosReader.h  AbstractStateExchange.cpp  AbstractStateExchange.h  AbstractVarioHandler.h  AbstractVarioOut.cpp  AbstractVarioOut.h  BackSeat.cpp  BackSeat.h  CMakeLists.txt  Msg.h  Runnable.h  StateTypes.h  Task.h
src/Common/cmd/: AbstractCmd.cpp  AbstractCmd.h  LedCmd.cpp  LedCmd.h  VarioCmd.cpp  VarioCmd.h
src/CommonMbed/: ADCFlapPosReader.cpp  ADCFlapPosReader.h  CMakeLists.txt  DIOFlapIndicator.cpp  DIOFlapIndicator.h  UARTStateExchange.cpp  UARTStateExchange.h  VarioOut.h
src/FrontSeat/: CMakeLists.txt  FrontSeatVarioHandler.cpp  FrontSeatVarioHandler.h  main.cpp
